# src/swagger/swagger_base.yml
@@ -7,8 +7,55 @@ consumes:
   - application/json
 produces:
   - application/json
-
+  
 host: $DOMAIN
+basePath: $BASE_PATH
+
+# Paths supported by this application
+paths:
+  /verify/domain:
+    post:
+      operationId: api.verifier.verify_domain
+      tags:
+      - verify
+      summary: Checks domain's evilness 
+      description: When given a domain, checks if it is evil and returns proper response
+      consumes:
+        - application/json
+      parameters:
+        - name: domain_body
+          in: body
+          description: domain to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string
+      responses:
+        200:
+          description: Domain's verdict
+
+  /details/ip:
+    post:
+      operationId: api.details.get_ip_details
+      tags:
+      - details
+      summary: Returns details for IP
+      description: When given an ip, returns it's details such as country or ASN
+      parameters:
+        - name: details_body
+          in: body
+          description: ip for which details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              ip:
+                type: string     
+      responses:
+        200:
+          description: IP's details
 basePath: $BASE_PATH
 
 # Paths supported by this application
@@ -232,3 +279,263 @@ paths:
       responses:
         200:
           description: DB status
+  /details/ip_by_domain:
+    post:
+      operationId: api.details.get_ip_details_by_domain
+      tags:
+      - details
+      summary: Returns IP details for domain
+      description: When given an domain, returns it's IP details such as country or ASN
+      parameters:
+        - name: details_body
+          in: body
+          description: domain for which ip details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string     
+      responses:
+        200:
+          description: IP's details
+
+  /details/urlscan:
+    post:
+      operationId: api.details.get_urlscan_details
+      tags:
+      - details
+      summary: Returns results from urlscan
+      description: When given an url, checks in urlscan and returns details
+      parameters:
+        - name: details_body
+          in: body
+          description: url for which urlscan details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              url:
+                type: string     
+      responses:
+        200:
+          description: Domain's details from urlscan
+        400:
+          description: Wrong URL provided
+        401:
+          description: Authorization error at urlscan.io
+
+  /details/safebrowsing:
+    post:
+      operationId: api.details.get_sfbrowsing_details
+      tags:
+      - details
+      summary: Returns results from safebrowsing
+      description: When given an url, checks in safebrowsing and returns details
+      parameters:
+        - name: details_body
+          in: body
+          description: domain for which safebrowsing details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string     
+      responses:
+        200:
+          description: Domain's details from safebrowsing
+        400:
+          description: Wrong domain provided
+        401:
+          description: Authorization error at safebrowsing
+  
+
+  /details/crtsh:
+    post:
+      operationId: api.details.get_crtsh_details
+      tags:
+      - details
+      summary: Returns results from crtsh
+      description: When given an url, checks in safebrowsing and returns details
+      parameters:
+        - name: details_body
+          in: body
+          description: domain for which crtsh details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string     
+      responses:
+        200:
+          description: Domain's details from crtsh
+
+  /details/whois:
+    post:
+      operationId: api.details.get_whois_details
+      tags:
+      - details
+      summary: Returns results from whois
+      description: When given an url, checks in whois and returns details
+      parameters:
+        - name: details_body
+          in: body
+          description: domain for which whois details will be returned
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string     
+      responses:
+        200:
+          description: Domain's details from whois
+
+  /verify/by_levenstein:
+    post:
+      operationId: api.verifier.verify_by_levenstein
+      tags:
+      - verify
+      summary: Check if malicious by levenstein distance
+      description: When given a domain, checks if it is evil by calculating it's levenstein distance and returns proper response
+      parameters:
+        - name: domain_body
+          in: body
+          description: domain to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string
+      responses:
+        200:
+          description: Domain's verdict
+
+  /verify/by_entropy:
+    post:
+      operationId: api.verifier.verify_by_entropy
+      tags:
+      - verify
+      summary: Check if malicious by entropy
+      description: When given a domain, checks if it is evil by calculating it's entropy and returns proper response
+      parameters:
+        - name: domain_body
+          in: body
+          description: domain to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string
+      responses:
+        200:
+          description: Domain's verdict
+
+  /server/health:
+    get:
+      operationId: api.main.health
+      tags:
+      - server
+      summary: Returns status of server
+      responses:
+        200:
+          description: Server's status
+
+  /server/create_db:
+    get:
+      operationId: api.main.create_db
+      tags:
+      - server
+      summary: Creates db
+      responses:
+        200:
+          description: DB status
+
+  /verify/by_sfbrowsing:
+    post:
+      operationId: api.verifier.verify_by_sfbrowsing
+      tags:
+      - verify
+      summary: Check if malicious by safebrowsing
+      description: When given a url, checks if it is evil by safebrowsing and returns proper response
+      parameters:
+        - name: url_body
+          in: body
+          description: url to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              url:
+                type: string
+      responses:
+        200:
+          description: url's verdict
+
+  /verify/by_urlscan:
+    post:
+      operationId: api.verifier.verify_by_urlscan
+      tags:
+      - verify
+      summary: Check if malicious by urlscan
+      description: When given a domain, checks if it is evil by urlscan and returns proper response
+      parameters:
+        - name: url_body
+          in: body
+          description: url to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              url:
+                type: string
+      responses:
+        200:
+          description: URL's verdict
+
+
+  /verify/by_crt:
+    post:
+      operationId: api.verifier.verify_by_crt
+      tags:
+      - verify
+      summary: Check if malicious by crt.sh
+      description: When given a domain, checks if it is evil by crt.sh and returns proper response
+      parameters:
+        - name: domain_body
+          in: body
+          description: domain to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string
+      responses:
+        200:
+          description: Domain's verdict
+
+  /verify/by_keywords:
+    post:
+      operationId: api.verifier.verify_by_keywords
+      tags:
+      - verify
+      summary: Check if malicious by checking keywords' match
+      description: When given a domain, checks if it is evil by keywords' match and returns proper response
+      parameters:
+        - name: domain_body
+          in: body
+          description: domain to be checked
+          required: true
+          schema:
+            type: object
+            properties:
+              domain:
+                type: string
+      responses:
+        200:
+          description: Domain's verdict
